--- a/contacto.html
+++ b/contacto.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pruba 1 page</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="png" href="turquesa.png"
+    <link rel="icon" type="png" href="turquesa.png">
 </head>
 <body>
     <nav>
