--- a/oficiosmap.html
+++ b/oficiosmap.html
@@ -16,7 +16,7 @@
     </nav>
 
     
-        <img src="fondo-wakfu.png" alt="todos los oficios" usemap="#mapaoficios" width="90%" height="700" >
+        <img src="fondo-wakfu.png" alt="todos los oficios" usemap="#mapaoficios" width="50%" height="auto" >
 
         <map name="#mapaoficios">
             <area shape="circle" 
