correcion de aritulugios

--- a/about.html
+++ b/about.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pruba 1 page</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="png" href="turquesa.png"
+    <link rel="icon" type="png" href="turquesa.png">
 </head>
 <body>
+    
     <nav>
         <a href="index.html">inicio</a>
         <a href="about.html">acerca de</a>
@@ -15,8 +16,10 @@
         <a href="oficiosmap.html">Mapa de oficios</a>
     </nav>
 
+    
+
     <section>
-        <img  src="campesino.png" alt="imagen acerca de campesion" width="800" height="400" >
+        <img  src="campesino.png" alt="imagen acerca de campesion" width="990" height="500" >
 
         <article>
     <p><h3>Esta pagina fue creada con el objetivo de mostrar acerca de los oficios del juego y anime basado en wakfu de una forma y sencilla de como esta constituido, sus niveles y su forma adquisicion </h3></p>
